# crypto-orderbook-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
documentation/: exchange_connectors_spec.md  implementation_testing_spec.md  order_book_spec.md  project_overview.md  websocket_api_spec.md
include/analytics/: market_analytics.hpp
include/config/: configuration_manager.hpp
include/core/: aggregated_order_book.hpp  memory_pool.hpp  order_book.hpp  order_book_manager.hpp  types.hpp  types_documented.hpp.example
include/exchange/: binance_connector.hpp  coinbase_connector.hpp  connection_manager.hpp  kraken_connector.hpp  websocket_connector.hpp
include/metrics/: metrics_collector.hpp
include/network/: frontend_rest_server.hpp  frontend_websocket_server.hpp  message_formatter.hpp  rest_api_server.hpp  websocket_server.hpp
include/persistence/: market_data_recorder.hpp
include/trading/: arbitrage_monitor.hpp
include/utils/: cpu_affinity.hpp  lock_free_queue.hpp  rate_limiter.hpp  ring_buffer.hpp  seq_lock.hpp  system_tuning.hpp  time_utils.hpp
src/: main.cpp  server_main.cpp
src/analytics/: market_analytics.cpp
src/config/: configuration_manager.cpp
src/core/: aggregated_order_book.cpp  memory_pool.cpp  order_book.cpp  order_book_manager.cpp
src/exchange/: binance_connector.cpp  coinbase_connector.cpp  connection_manager.cpp  kraken_connector.cpp
src/metrics/: metrics_collector.cpp
src/network/: frontend_rest_server.cpp  frontend_websocket_server.cpp  rest_api_server.cpp  websocket_server.cpp
src/persistence/: market_data_recorder.cpp
src/trading/: arbitrage_monitor.cpp
src/utils/: cpu_affinity.cpp  lock_free_queue.cpp  rate_limiter.cpp  system_tuning.cpp  time_utils.cpp
tests/: CMakeLists.txt  test_aggregated_order_book.cpp  test_analytics.cpp  test_arbitrage_monitor.cpp  test_configuration.cpp  test_lock_free_queue.cpp  test_market_data_recorder.cpp  test_memory_pool.cpp  test_metrics_collector.cpp  test_order_book.cpp  test_order_book_manager.cpp  test_rate_limiter.cpp  test_ring_buffer.cpp  test_seq_lock.cpp  test_time_utils.cpp
tests/benchmarks/: bench_order_book.cpp  bench_serialization.cpp
tests/integration/: test_exchange_connectors.cpp
tests/unit/: test_lock_free_queue.cpp  test_memory_pool.cpp  test_order_book.cpp  test_rate_limiter.cpp
